--- a/connect/connect/src/main/resources/application.properties
+++ b/connect/connect/src/main/resources/application.properties
@@ -4,6 +4,9 @@ spring.datasource.username=root
 spring.datasource.password=21CAB234
 
 
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
 server.port=8081
 
 spring.jpa.generate-ddl=true
